corrected z-index for side photo

--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ body {
   width: 40%;
   position: fixed;
   object-fit: cover;
+  z-index:10;
 }
 .wrapper {
   margin-left: 40%;
